Bug #3729
getifaddrs must learn to stop worrying and love the other address families
100%
Description
Presently getifaddrs appears to enumerate network interface addresses only from AF_INET and AF_INET6. This is contrary to the expectations of a small set of software (e.g. allegedly ISC dhcpd) which expects this function to deal also in AF_LINK, etc.
Related issues
Updated by Joshua M. Clulow almost 8 years ago
NB: After #3728 integrates, there will be a getifaddrs(3SOCKET) which mentions this bug. Once this is fixed, the BUG section should be removed from that manual page.
Updated by Electric Monk over 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit e34d8872f4a713d904a4b34fb081060d1a7eba62
commit e34d8872f4a713d904a4b34fb081060d1a7eba62 Author: Sebastian Wiedenroth <wiedi@frubar.net> Date: 2017-06-21T18:12:05.000Z 3729 getifaddrs must learn to stop worrying and love the other address families Reviewed by: Yuri Pankov <yuri.pankov@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Dan McDonald <danmcd@kebe.com> Approved by: Gordon Ross <gwr@nexenta.com>
Updated by Electric Monk over 3 years ago
git commit f67cf39ba88ad7c4bee81445cc7a7468e0289f01
commit f67cf39ba88ad7c4bee81445cc7a7468e0289f01 Author: Robert Mustacchi <rm@joyent.com> Date: 2017-06-26T17:14:00.000Z backout: 3729 getifaddrs must learn to stop worrying and love the other address families (breaks consumers)
Updated by Sebastian Wiedenroth over 3 years ago
This was backed out because consumers have come to depend on this bug.
Namely libuv, while "multi-platform" had a special case for sunos that could not cope with address types other than AF_INET and AF_INET6 beeing returned. This has since been fixed upstream (and released with 1.13.0) but would still break older releases already in use.
I'm looking into the best way to go from here.
Updated by Gergő Mihály Doma over 1 year ago
- Has duplicate Bug #11196: getifaddrs does not return MAC addresses (ISC KEA) added