3729 getifaddrs must learn to stop worrying and love the other address families